--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "cordova-plugin-bd-geolocation",
 	"version": "8.1.1",
-	"description": "Baidu Geolocation for Cordova（基于百度定位SDK 7.3）",
+	"description": "Baidu Geolocation for Cordova（基于百度定位SDK 7.3。实现前台定位通知服务来适配 android 8.0 对后台定位的限制）",
 	"main": "Geolocation.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/laixiangran/cordova-plugin-baidu-geolocation.git"
+		"url": "git+https://github.com/laixiangran/cordova-plugin-bd-geolocation.git"
 	},
 	"keywords": [
 		"baidu",
@@ -18,7 +18,7 @@
 	"author": "赖祥燃",
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/laixiangran/cordova-plugin-baidu-geolocation/issues"
+		"url": "https://github.com/laixiangran/cordova-plugin-bd-geolocation/issues"
 	},
-	"homepage": "https://github.com/laixiangran/cordova-plugin-baidu-geolocation#readme"
+	"homepage": "https://github.com/laixiangran/cordova-plugin-bd-geolocation#readme"
 }
